--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
             <artifactId>cors-filter</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
